Remove now unneeded cursed spacing fix

--- a/style.scss
+++ b/style.scss
@@ -228,15 +228,9 @@ main.contentColumn-2hrIYH .rq-settingsHeader { margin-bottom: .8rem; }
 
 .rq-server-title { font-weight: 600; }
 
-.rq-hide-reply-header>div>h2 { 
-   &>span:first-child {
-      &>span:nth-child(2) { display: none }
-      &>span:nth-child(3) { display: none }
-   }
-   // :concern:
-   &>span:last-child {
-      margin-left: -7px !important;
-   }
+.rq-hide-reply-header>div>h2 >span:first-child {
+   &>span:nth-child(2) { display: none }
+   &>span:nth-child(3) { display: none }
 }
 
 .rq-nesting-cap { color: var(--text-muted) }
